--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,21 @@
 
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
+
+<h2>Add a Comment:</h2>
+<%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
+  <p>
+    <%= form.label :content %><br>
+    <%= form.text_area :content %>
+  </p>
+  <p>
+    <%= form.submit "Add Comment" %>
+  </p>
+<% end %>
+
+<h2>Comments:</h2>
+<% @post.comments.each do |comment| %>
+  <p>
+    <%= comment.content %>
+  </p>
+<% end %>
