--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,28 +1,30 @@
-<p style="color: green"><%= notice %></p>
+<div class="flex flex-col gap-2">
+  <p style="color: green"><%= notice %></p>
 
-<%= render @post %>
+  <%= render @post %>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
+  <div class="">
+    <%= link_to "Edit this post", edit_post_path(@post) %> |
+    <%= link_to "Back to posts", posts_path %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
+    <%= button_to "Destroy this post", @post, method: :delete %>
+  </div>
+
+  <h2>Add a Comment:</h2>
+  <%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
+    <p>
+      <%= form.label :content %><br>
+      <%= form.text_area :content %>
+    </p>
+    <p>
+      <%= form.submit "Add Comment" %>
+    </p>
+  <% end %>
+
+  <h2>Comments:</h2>
+  <% @post.comments.each do |comment| %>
+    <p>
+      <%= comment.content %>
+    </p>
+  <% end %>
 </div>
-
-<h2>Add a Comment:</h2>
-<%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
-  <p>
-    <%= form.label :content %><br>
-    <%= form.text_area :content %>
-  </p>
-  <p>
-    <%= form.submit "Add Comment" %>
-  </p>
-<% end %>
-
-<h2>Comments:</h2>
-<% @post.comments.each do |comment| %>
-  <p>
-    <%= comment.content %>
-  </p>
-<% end %>
