--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,17 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Posts</h1>
+<div class="flex flex-col w-full">
+  <h1 class="text-2xl">Posts</h1>
+  <div id="posts">
+    <% @posts.each do |post| %>
+      <div class="p-4">
+        <%= render post %>
+        <p class="flex justify-end">
+          <%= link_to "Show this post", post %>
+        </p>
+      </div>
+    <% end %>
+  </div>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
+  <%= link_to "New post", new_post_path %>
 </div>
-
-<%= link_to "New post", new_post_path %>
