--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,30 +1,32 @@
-<div class="flex flex-col gap-2">
+<div class="flex flex-col gap-2 w-full">
   <p style="color: green"><%= notice %></p>
 
   <%= render @post %>
 
-  <div class="">
+  <div class="flex flex-row justify-end gap-2">
     <%= link_to "Edit this post", edit_post_path(@post) %> |
-    <%= link_to "Back to posts", posts_path %>
-
+    <%= link_to "Back to posts", posts_path %> |
     <%= button_to "Destroy this post", @post, method: :delete %>
   </div>
 
-  <h2>Add a Comment:</h2>
-  <%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
-    <p>
-      <%= form.label :content %><br>
-      <%= form.text_area :content %>
-    </p>
-    <p>
-      <%= form.submit "Add Comment" %>
-    </p>
-  <% end %>
 
   <h2>Comments:</h2>
   <% @post.comments.each do |comment| %>
-    <p>
-      <%= comment.content %>
-    </p>
+    <div class="flex flex-col border border-gray-300 rounded p-4">
+      <p>
+        <%= comment.content %>
+      </p>
+    </div>
   <% end %>
+
+  <div class="flex flex-col gap-2 w-full">
+    <%= form_with(model: [@post, @post.comments.build], local: true) do |form| %>
+      <p class="w-full">
+        <%= form.text_area :content, class: "w-full" %>
+      </p>
+      <p class="flex justify-end">
+        <%= form.submit "Add Comment" %>
+      </p>
+    <% end %>
+  </div>
 </div>
